--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -146,12 +146,12 @@
 					<thead>
 						<tr>
 							<th width="41%" class="asc" id="transCompanyNameColumn" data-bind="click: sortColumn">Company Name</th>
-							<th width="10%">Type</th>
+							<th width="10%"><div class="floatLeft w80P blackCl">Type</div></th>
 							<th width="10%"><div class="floatLeft w80P blueCl">Trade Date</div><div class="floatRight w20P"><img data-bind="tooltip: 'tranTradeDate' " alt="" src="img/ico-info_blue.png"></div></th>
 							<th width="14%"><div class="floatLeft w80P blueCl">Number<br> of Shares</div><div class="floatRight w20P"><img data-bind="tooltip: 'transNoOfShares'" alt="" src="img/ico-info_blue.png"></div></th>
 							<th width="10%"><div class="floatLeft w80P blueCl">Price</div><div class="floatRight w20P"><img data-bind="tooltip: 'transPrice'" alt="" src="img/ico-info_blue.png"></div></th>
 							<th width="10%"><div class="floatLeft w80P blueCl">Last Close Price</div><div class="floatRight w20P"><img data-bind="tooltip: 'transLastClosePrice'" alt="" src="img/ico-info_blue.png"></div></th>
-							<th width="5%">Action</th>
+							<th width="5%"><div class="floatLeft w80P blackCl">Action</div></th>
 						</tr>
 					</thead>
 					<tbody>
