--- a/clientv2/premium.html
+++ b/clientv2/premium.html
@@ -27,7 +27,7 @@
 		<div class="trial-box">
 		<b>Key benefits:</b>
 			<ul>
-				<li><p>Ability to create and manage a watch list</p></li>
+				<li><p>Ability to create and manage a StockList</p></li>
 				<!--<li><p>Access to additional companies and currencies</p></li>-->
 				<li><p>Access to estimates and advanced charting</p></li>
 				<li><p>Real time market data <i>(only available with a paid Plus account)</i></p></li>
