--- a/branches/portfolio/clientv2/email/halfway.html
+++ b/branches/portfolio/clientv2/email/halfway.html
@@ -34,7 +34,7 @@
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;" th:text="${'Trial - ' + halfway + ' Days Remaining'}">Trial - 7 Days Remaining</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"><b>You are halfway through your StockFacts Plus trial account.</b> In order to continue using the Plus features, purchase a Plus account now.</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 10px 0;">A Plus account includes:</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Ability to create and manage a watch list</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Ability to create and manage a StockList</div>
 									<!--<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Access to additional companies and currencies</div>-->
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 0 0;">- Access to estimates and advanced charting</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;">- Real time market data (only available with a paid Plus account).</div>
