--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -50,7 +50,7 @@
 										<input style="cursor: pointer;" class="textCenter" type="checkbox" id="selectAllId" data-bind="checked: $root.selectAllTransaction">
 										</div>
 									</th>
-									<th width="29%" class="asc" id="companyName" data-bind="click: sortColumnAsc">Company Name</th>
+									<th width="29%" class="asc" id="perCompanyName" data-bind="click: perSortByCompanyName">Company Name</th>
 									<th width="15%" id="perTradeDate" data-bind="click: perSortbyTradeDate"><div class="tradeDate floatLeft w80P blueCl">First Trade <br> Date</div><div class="floatRight w20P"><img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'firstTradeDate'"  /></div></th>
 									<th width="14%" id="perNumOfShares" data-bind="click: perSortbyNumShares"><div class="numShares floatLeft w80P blueCl">Number of Shares</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'numberOfShares'"  /></div></th>
 									<th width="16%" id="perLastClosePrice" data-bind="click: perSortLastClsPrice"><div class="lastClosePr floatLeft w80P blueCl">Last Close<br> Price</div><div class="floatRight w20P"> <img src="img/ico-info_blue.png" alt="" data-bind="tooltip: 'lastClosePrice'"  /></div></th>
