--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -140,7 +140,7 @@
 			
 			<div>
 				 <div align="right">
-					<a class="save-button" data-bind="click: addTrans">Save</a>
+					<a class="save-button" name="transactionSave" data-bind="click: addTrans">Save</a>
 				</div>
 				<table>
 					<thead>
