Portfolio UI Changes

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -146,7 +146,7 @@
 					<thead>
 						<tr>
 							<th width="41%" class="asc" id="transCompanyNameColumn" data-bind="click: transSortByCompanyName">Company Name</th>
-							<th width="10%"><div class="floatLeft w80P blackCl">Type</div></th>
+							<th width="10%" id="transType" data-bind="click: transSortbyType"><div class="floatLeft w80P blackCl">Type</div></th>
 							<th width="10%" id="transTradeDate" data-bind="click: transSortbyTradeDate"><div class="floatLeft w80P blueCl">Trade Date</div><div class="floatRight w20P"><img data-bind="tooltip: 'tranTradeDate' " alt="" src="img/ico-info_blue.png"></div></th>
 							<th width="14%" id="transNumShare" data-bind="click: transSortbyNumberShare"><div class="floatLeft w80P blueCl">Number<br> of Shares</div><div class="floatRight w20P"><img data-bind="tooltip: 'transNoOfShares'" alt="" src="img/ico-info_blue.png"></div></th>
 							<th width="10%" id="transPrice" data-bind="click: transSortbyPrice"><div class="floatLeft w80P blueCl">Price</div><div class="floatRight w20P"><img data-bind="tooltip: 'transPrice'" alt="" src="img/ico-info_blue.png"></div></th>
