Portfolio key development tab UI changes

--- a/branches/portfolio/clientv2/key-developments.html
+++ b/branches/portfolio/clientv2/key-developments.html
@@ -31,7 +31,7 @@
 		</div>
 		<div id="keyDevelopemntContentDiv" style="display:none">
 			<div class="grid scan intro">
-			    <p>Select which developments you would like to see for your StockList</p>
+			    <b>Select which key developments you would like to see for your StockList.</b>
 			</div>
 			<div class="content">
 			<div class="control-box">
