Displaying the promo page when user is not authenticated

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -18,6 +18,9 @@
 	<div class="grid">
 		<span data-bind="template: 'stocklist-header'"></span>
 	</div>
+	<section id="alerts-content-alternative" data-bind="if:(userStatus() == 'UNAUTHORIZED' || userStatus() == 'EXPIRED')">
+		<div data-bind="component:{ name:'premium-preview', params:{sectionName: sectionName, userStatus: userStatus} }"></div>
+	</section>
 <!-- ko {if: finalWL().length} -->
 	<section class="valuation-performance" id="valuationSection">
 		<div class="grid scan intro" style="display:none" id="valutionNoCompaniesTextDiv">
