--- a/branches/portfolio/clientv2/key-developments.html
+++ b/branches/portfolio/clientv2/key-developments.html
@@ -23,7 +23,9 @@
 	<div class="grid">
 		<span data-bind="template: 'stocklist-header'"></span>
 	</div>
-	
+	<section id="alerts-content-alternative" data-bind="if:(userStatus() == 'UNAUTHORIZED' || userStatus() == 'EXPIRED')">
+		<div data-bind="component:{ name:'premium-preview', params:{sectionName: sectionName, userStatus: userStatus} }"></div>
+	</section>
 <!-- ko {if: finalWL().length} -->	
 	<section class="key-dev-match">
 		<div class="grid scan intro" style="display:none" id="keyDevNoCompaniesTextDiv">
