--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -161,9 +161,9 @@
 						<tr>
 							<td class="company-row"><select class="select-company" id="watchlistCompaniesSelect" data-bind="options: watchlistCompanies, optionsCaption: 'Select a Company', value: selectedCompanyValue, optionsValue: 'ticker', optionsText: 'companyName'"></select></td>
 							<td><select class="select-type" data-bind="options: availableTypes, value: selectedAvailableType" ></select></td>
-							<td><input data-bind="value: initialTradeDate" type="text" id="tradeDate" readonly="readonly"/></td>
-							<td><input type="text" class="text" data-bind="valuationNumeric, valueUpdate: 'afterkeydown', value: initialNumberOfShares"/></td>
-							<td><input type="text" data-bind="valuationNumeric, value: initialCostAtPurchase" /></td>
+							<td><input type="text" id="tradeDate" data-bind="value: initialTradeDate" readonly="readonly"/></td>
+							<td><input type="text" id="initialNumberOfShares" data-bind="valuationNumeric, valueUpdate: 'afterkeydown', value: initialNumberOfShares"/></td>
+							<td><input type="text" id="initialCostAtPurchase" data-bind="valuationNumeric, value: initialCostAtPurchase" /></td>
 							<td>&nbsp;</td>
 							<td><a class="add-button" data-bind="click: addSaveTransactions">Add</a></td>
 						</tr>
