Modified for fixing #1028 and #1030

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -138,7 +138,7 @@
 			<!-- div content for transactions functionality -->
 			<div class="grid transactions" data-bind="css:{'show-hidden': activeTab() == 'transactions'}">
 			<div style="margin: 15px 0px 30px 20px">
-				<b>Enter transaction to view additional details on your StockList</b>
+				<b>Enter transaction to view additional details on your StockList.</b>
 			</div>
 			
 			<div>
