Fix for ticket #1023 - When changing pages on the transactions page we should be scrolling to the top of the results table - not the top of the page.

--- a/branches/portfolio/clientv2/valuation.html
+++ b/branches/portfolio/clientv2/valuation.html
@@ -141,7 +141,7 @@
 				<b>Enter transaction to view additional details on your StockList.</b>
 			</div>
 			
-			<div>
+			<div id="transTableContainer">
 				 <div align="right">
 					<a class="save-button" name="transactionSave" data-bind="click: addSaveTransactions">Save</a>
 				</div>
