Fix for ticket #1041

--- a/clientv2/email/verify.html
+++ b/clientv2/email/verify.html
@@ -33,7 +33,7 @@
 									</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Please verify your StockFacts Plus account.</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">Thank you for registering for a StockFacts Plus account. You will gain access to 
-									create and manage Watchlists/Alerts, estimates and advanced charting, and real-time data (available with paid accounts).</div>
+									create and manage StockList, estimates and advanced charting, and real-time data (available with paid accounts).</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">There's one more step to complete your registration. Confirming your account will 
 									give you access to StockFacts Plus and all future notifications will be sent to this email address.</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">To access your account and get started, select the button below.</div>
