changes are done for #1053

--- a/clientv2/iframe.html
+++ b/clientv2/iframe.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta charset="utf-8" />
     <title>IFRAME - SGX</title>
     <link rel="shortcut icon" href="img/sgxPortal.ico">
     <script type="text/javascript" src="js/wmsi/XD.js"></script>		
@@ -53,7 +54,7 @@
 	    	// page objects 
 	    	var headerHeight = 200;
 			var cFrame = $("#company-info");
-	        var height = 600, scrollPos = 0;
+	        var height = 800, scrollPos = 0;
 	        var scrolling = "no";
 	        try{
 	        	var pieces = data.split("-");
