--- a/clientv2/company-tearsheet.html
+++ b/clientv2/company-tearsheet.html
@@ -31,7 +31,7 @@
 			        <li><a href="#overview">Overview</a></li>
 			        <li><a href="#valuation">Valuation</a></li>
 			        <li><a href="#financials">Financials</a></li>
-			        <li><a href="#dividends">Dividends</a></li>
+			        <li><a href="#dividends" target="#dividends" data-bind="click : function() { PAGE.resizeIframeSimple(); }">Dividends</a></li>
 			        <li><a href="#ownership">Ownership</a></li>
 			    </ul>
 			    <div class="tab-content">			    
@@ -224,7 +224,7 @@
 							</tbody>
 						</table>
 						<!-- /ko -->
-						<!-- ko if: $data.holders == null -->
+						<!-- ko if: $data.dividendHistory.dividendValues == null -->
 							<p style="text-align: center;">There is no ownership data available.</p>
 						<!-- /ko -->
 					</div>			
