Modified to fix #988

--- a/clientv2/valuation.html
+++ b/clientv2/valuation.html
@@ -130,7 +130,7 @@
 					</ul>
 				</div>
 					<div class="clear mt15p ml10p">
-						<br>Total invested includes all transactions but does not factor in dividends or stock splits. Current value is based on the most recent closing price. Totals do not account for the potential impacts of taxes or any trading of corporate actions. Percentage change is based on the total amount invested vs.the current value of the holding.
+						<br>Total invested includes all transactions but does not factor in dividends or stock splits. Current value is based on the most recent closing price. Totals do not account for the potential impacts of taxes or any trading of corporate actions. Percentage change is based on the total amount invested vs.the current value of the holding.<br>Price history reflects last five years.
 				</div>
 				<!-- /ko -->
 			</div>
